css/styles.css
body{
  text-align: center;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  background-color: rgb(224, 238, 250);
}

.jumbotron-custom{
  border: 4px solid rgb(155, 225, 225);
  margin: 20px;
  padding: 10px;
  background-color:rgb(248, 248, 232)
}

.card-body{
  border: 2px solid rgb(155,192,224);
  float: left;
}

.italic{
  font-style: italic;
}

img{
  float: right;
  border: 6px inset rgb(255,77,165);
}

.blue-theme{
  background-color: rgb(155, 192, 224);
  border: rgb(224,238,250)
}

.cute{
  color: rgb(236, 131, 148);
}

.underline{
  text-decoration: underline;
}

